# ros2_live_viz

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg
include/ros2_live_viz/: websocket_server.hpp
ros2_live_viz/: __init__.py  scanner.py  wrappers.py
ros2_live_viz/command/: __init__.py  live_viz.py
src/: backend_node.cpp
web/: app.js  index.html
